# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  06 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Added a patch from Christian Heim <phreak@gentoo.org> to remove stale files,
  such as group- from /etc before creating our stage tarballs. This is for bug
  #166695.

  06 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Commenting out the livecd-kernel code, since the Installer should be doing
  everything necessary itself.

  14 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Fix up the pci.ids/usb.ids code to work with newer pciutils and future-proof
  the usbutils hanlding in case they follow suit with pciutils.

  13 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> arch/alpha.py,
  arch/amd64.py, arch/arm.py, arch/hppa.py, arch/ia64.py, arch/mips.py,
  arch/ppc.py, arch/ppc64.py, arch/s390.py, arch/sh.py, arch/sparc.py,
  arch/sparc64.py, arch/x86.py, catalyst, modules/generic_stage_target.py:
  Added a patch from Andrew Gaffney <agaffney@gentoo.org> to fix up the
  problems with using all of the various subarch settings.

  13 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh, targets/support/create-iso.sh:
  Disabled deleting of /boot so we actually can work with EFI/grub, made EFI
  check look in the correct location, and made sure we don't delete /voot
  within the EFI code if grub is present.

  12 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Added another fix from Andrew Gaffney <agaffney@gentoo.org> from bug
  #166294. This one should fix the HPPA/PPC architectures.

  12 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Added patch from Andrew Gaffney <agaffney@gentoo.org> for bug #166420 to
  remove the autoresume point for portage, as it really isn't needed and