@@ -143,11 +143,10 @@ fi
 if [ -n "${clst_livecd_xdm}" ]
 then
 	sed -i \
-		-e "s:DISPLAYMANAGER=\"xdm\":DISPLAYMANAGER=\"${clst_livecd_xdm}\":" \
-		-e ":^DISPLAYMANAGER: s:^#::" \
+		-e "s:^#\\?DISPLAYMANAGER=.\+$:DISPLAYMANAGER=\"${clst_livecd_xdm}\":" \
 		/etc/rc.conf
 	sed -i \
-		-e "s:DISPLAYMANAGER=\"xdm\":DISPLAYMANAGER=\"${clst_livecd_xdm}\":" \
+		-e "s:^#\\?DISPLAYMANAGER=.\+$:DISPLAYMANAGER=\"${clst_livecd_xdm}\":" \
 		/etc/conf.d/xdm
 fi
 
