@@ -1,6 +1,12 @@
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Id: $
 
+  06 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  targets/support/livecdfs-update.sh:
+  Added a patch from Andrew Gaffney <agaffney@gentoo.org> to fix my completely
+  broken sed for rc.conf, which caused all kinds of hell to break loose when
+  booting a new CD. This is 2.0.3_pre3.
+
   06 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
   modules/generic_stage_target.py:
   Added a patch from Christian Heim <phreak@gentoo.org> to remove stale files,
